# typed_graph_cli

./: .gitignore  .hgtags  Cargo.toml  README.md
build_changeset_lang/: .gitignore  Cargo.toml  README.md
build_changeset_lang/examples/: playground.rs
build_changeset_lang/examples/versions/: 1.bs  2.bs
build_changeset_lang/src/: error.rs  lib.rs
build_changeset_lang/src/schema/: changeset.rs  field_path.rs  mod.rs
build_changeset_lang/src/schema/actions/: added_endpoint.rs  added_field.rs  added_type.rs  added_type_data.rs  added_varient.rs  added_varient_type.rs  edited_endpoint.rs  edited_field.rs  edited_generics.rs  edited_opaque.rs  edited_schema.rs  edited_type.rs  edited_variant.rs  edited_variants_order.rs  mod.rs  removed_endpoint.rs  removed_field.rs  removed_type.rs  removed_varient.rs  single_change.rs
build_changeset_lang/src/traits/: mod.rs
build_changeset_lang/src/traits/changeset_builder/: changeset_builder.rs  mod.rs
build_script_lang/: Cargo.toml  README.md  out.txt
build_script_lang/examples/: parse_file.rs
build_script_lang/examples/test_files/: simple.bs
build_script_lang/src/: lib.rs
build_script_lang/src/generic/: endpoint.rs  fields.rs  mod.rs  quantifier.rs  visibility.rs
build_script_lang/src/schema/: edge_exp.rs  enum_exp.rs  enum_varient.rs  import_exp.rs  mod.rs  node_exp.rs  schema.rs  schema_stm.rs  schema_stm_type.rs  struct_exp.rs
build_script_lang/src/schema/generic/: endpoint.rs  fields.rs  mod.rs  quantifier.rs  visibility.rs
build_script_shared/: Cargo.toml  README.md
build_script_shared/examples/: node.bs  simple.bs
build_script_shared/examples/orm/: 1.bs  2.bs
build_script_shared/src/: code_preview.rs  dependency_graph.rs  input_marker.rs  lib.rs  serde_parsers.rs  tests.rs
build_script_shared/src/error/: composer_error.rs  error.rs  mod.rs  owned_parser_error.rs  parser_error.rs
build_script_shared/src/parsers/: comment.rs  generic_parsers.rs  generics.rs  ident.rs  mark.rs  mod.rs  parser_traits.rs  types.rs
build_script_shared/src/parsers/attributes/: attribute.rs  attribute_function.rs  attribute_function_key_value.rs  attribute_key_value.rs  attributes.rs  mod.rs
migration_handler/: Cargo.toml  README.md
migration_handler/src/: case_changer.rs  gen_error.rs  lib.rs  project.rs
migration_handler/src/cli/: args.rs  list.rs  mod.rs  new_project.rs  process.rs  project_settings.rs
migration_handler/src/cli/export/: export.rs  mod.rs  python.rs  rust.rs
migration_handler/src/cli/migration/: add_migration.rs  link_migration.rs  migration.rs  mod.rs  update_migrations.rs
migration_handler/src/cli/schema/: clone_schema.rs  mod.rs  rename_schema.rs  schema.rs
migration_handler/src/code_generation/: code_generator.rs  mod.rs
migration_handler/src/code_generation/python/: edge_exp.rs  enum_exp.rs  mod.rs  node_exp.rs  project.rs  schema.rs  struct_exp.rs  to_python_type.rs
migration_handler/src/code_generation/rust/: changeset.rs  edge_exp.rs  enum_exp.rs  mod.rs  node_exp.rs  project.rs  schema.rs  struct_exp.rs  to_rust_type.rs
migration_handler/test/missing_schema/schemas/: 0.0.bs  0.1.bs  0.2.bs
migration_handler/test/simple_project/schemas/: 1.0.bs
typed_graph_cli/: Cargo.toml  README.md  install.bat  install.sh  install_source.bat  install_source.sh
typed_graph_cli/book_template/: book.toml
typed_graph_cli/book_template/src/: SUMMARY.md  primitives.md
typed_graph_cli/book_template/templates/macros/: fields.tera
typed_graph_cli/book_template/templates/section_headers/: edges.md  imports.md  nodes.md  schema.md  structs.md  types.md
typed_graph_cli/src/: case_changer.rs  gen_error.rs  lib.rs  project.rs
typed_graph_cli/src/book_generation/: create_doc_book.rs  mod.rs
typed_graph_cli/src/cli/: args.rs  list.rs  mod.rs  new_project.rs  process.rs  project_settings.rs
typed_graph_cli/src/code_generation/: code_generator.rs  mod.rs  targets.rs
(+68 files in other folders)
