[package]
name = "build_script_shared"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.49"
fake = { version = "2.9", features = ["derive"] }
serde = { version="1.0.195", features = ["serde_derive"] }
rand = "0.8.5"
