[package]
name = "typed_graph_rust_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_script_shared = { path = "../build_script_shared" }
build_script_lang = { path = "../build_script_lang" }
build_changeset_lang = { path = "../build_changeset_lang"}
clap = { version = "3.2.14", features = ["derive"] }
serde = { version="1.0", features = ["serde_derive", "rc"] }
thiserror = "1.0.49"

[features]
diff = []

[[bin]]
name = "migration"
path = "src/bin/main.rs"